tests/syntax_error/missing_global_keyword_value.jou
foo = 1  # Error: missing 'global' or 'const' keyword when defining global variable
